Add effective can_work/can_use view
